added title and change some item

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>To do List</title>
+    <title>Task List</title>
   </head>
   <body>
-    <br><br>
-    <center><h5>VK-Project</h5></center>
+    <br><br><br>
+    <center><h4>VK-Project</h4></center>
 
     <div id="container">
       <div class="input_container">
@@ -33,7 +33,7 @@
               stroke-linejoin="round"
             />
           </svg>
-          <h4>Add Task</h4>
+          <h5>Add Task</h5>
         </header>
         <div class="input_zone">
           <input id="input" type="text" />
@@ -58,7 +58,7 @@
               stroke-linejoin="round"
             />
           </svg>
-          <h4>Task List</h4>
+          <h5>Task List</h5>
         </header>
       </div>
     </div>
