basics add some content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Task List</title>
+    <title>Task List Memo</title>
   </head>
   <body>
     <br><br><br>
-    <center><h4>VK-Project</h4></center>
+    <center><h4>VK-Project 1</h4></center>
 
     <div id="container">
       <div class="input_container">
@@ -37,7 +37,7 @@
         </header>
         <div class="input_zone">
           <input id="input" type="text" />
-          <button id="btnAdd" type="submit">Create Task</button>
+          <button id="btnAdd" type="submit">Create Task 1</button>
         </div>
       </div>
 
@@ -58,7 +58,7 @@
               stroke-linejoin="round"
             />
           </svg>
-          <h5>Task List</h5>
+          <h5>Task List memo </h5>
         </header>
       </div>
     </div>
