added some conditions

--- a/help.html
+++ b/help.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinod Sir</title>
+    
 </head>
 <body>
     <h1>Vinod Sir, you did a great job!</h1>
+     <h1>Vinod Sir, how are you!</h1>
+     <h1>Vinod Sir, fine</h1>
+     <h1>Vinod Sir, where are you now?!</h1>
+     <h1>Vinod Sir,delhi</h1>
 </body>
 </html>
