added some contain

--- a/help.html
+++ b/help.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Vinod Sir, you did a great job!</h1>
+     <h1>Vint job!</h1>
+     <h1>Vinoa great job!</h1>
+     <h1>Vinod Sir, you did job!</h1>
+     <h1>Vinod Sir, did a great job!</h1>
 </body>
 </html>
