--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
     <br><br><br>
     <center><h4>VK-Project 1</h4></center>
+    <center><h4>Time Management at your finger tips!!</h4></center>
 
     <div id="container">
       <div class="input_container">
